WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270296
REGRESSION(
272180@main
): Crash in CSSCalcOperationNode::simplifyRecursive with xywh() and rect() clip-paths
https://bugs.webkit.org/show_bug.cgi?id=270296
Summary
REGRESSION(272180@main): Crash in CSSCalcOperationNode::simplifyRecursive wit...
Tim Nguyen (:ntim)
Reported
2024-02-29 08:54:17 PST
rdar://123508905
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2024-02-29 17:52:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25330
Antti Koivisto
Comment 2
2024-03-09 00:58:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25667
EWS
Comment 3
2024-04-15 07:21:19 PDT
Committed
277500@main
(040cadd0e752): <
https://commits.webkit.org/277500@main
> Reviewed commits have been landed. Closing PR #25667 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug