CrashTracer: com.apple.WebKit.WebContent at com.apple.WebCore: WebCore::CSSCalcOperationNode::simplifyRecursive https://bugs.webkit.org/show_bug.cgi?id=270296 rdar://123508905

Reviewed by NOBODY (OOPS!).

* LayoutTests/imported/w3c/web-platform-tests/css/css-masking/parsing/clip-path-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-masking/parsing/clip-path-computed.html:
* Source/WebCore/css/BasicShapeFunctions.cpp:
(WebCore::valueForBasicShape):
* Source/WebCore/css/BasicShapeFunctions.h:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::valueForPathOperation):
(WebCore::shapePropertyValue):
(WebCore::valueForOffsetShorthand):